[gd_scene load_steps=3 format=2]

[ext_resource path="res://Util/SexActivityCreator/ActivityAcitonItem.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="ActivityAcitonItem" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="EditButton" type="Button" parent="."]
margin_right = 32.0
margin_bottom = 25.0
text = "Edit"

[node name="Label" type="Label" parent="."]
margin_left = 35.0
margin_top = -1.0
margin_right = 1194.0
margin_bottom = 24.4
size_flags_horizontal = 3
text = "Test text"
clip_text = true

[node name="DeleteButton" type="Button" parent="."]
margin_left = 1197.0
margin_right = 1249.0
margin_bottom = 25.0
text = "Delete"

[node name="DownButton" type="Button" parent="."]
margin_left = 1252.0
margin_right = 1264.0
margin_bottom = 25.0
text = "v"

[node name="UpButton" type="Button" parent="."]
margin_left = 1267.0
margin_right = 1280.0
margin_bottom = 25.0
text = "^"

[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
